--- a/ar-playground/index.html
+++ b/ar-playground/index.html
@@ -14,12 +14,8 @@
         <a-assets>
             <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/LingiLernenPL/LingiLernenPL.github.io/master/ar-playground/models/LingiLernenLogo.glb"></a-asset-item>
         </a-assets>
-
-        <a-marker type='barcode' value='7'>
-            <a-box position='0 0 0' color="yellow"></a-box>
-        </a-marker>
-
-        <a-marker id="animated-marker" type='barcode' value='6'>
+   
+        <a-marker type="pattern" preset="custom" url="https://raw.githubusercontent.com/LingiLernenPL/LingiLernenPL.github.io/master/ar-playground/pattern-05-barcode.patt" 
             <a-entity
                 animation-mixer
                 gltf-model="#animated-asset"
@@ -27,7 +23,7 @@
             </a-entity>
         </a-marker>
 
-        <a-entity camera></a-entity>
+        <a-marker-camera></a-marker>
         </a-scene>
     </body>
 </html>
