--- a/ar-playground/index.html
+++ b/ar-playground/index.html
@@ -15,7 +15,7 @@
             <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/LingiLernenPL/LingiLernenPL.github.io/master/ar-playground/models/LingiLernenLogo.glb"></a-asset-item>
         </a-assets>
    
-        <a-marker type="pattern" preset="custom" url="https://raw.githubusercontent.com/LingiLernenPL/LingiLernenPL.github.io/master/ar-playground/pattern-05-barcode.patt" 
+         <a-marker id="animated-marker" type='barcode' value='6'>
             <a-entity
                 animation-mixer
                 gltf-model="#animated-asset"
