--- a/ar-playground/index.html
+++ b/ar-playground/index.html
@@ -14,7 +14,11 @@
         <a-assets>
             <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/LingiLernenPL/LingiLernenPL.github.io/master/ar-playground/models/LingiLernenLogo.glb"></a-asset-item>
         </a-assets>
-   
+  
+        <a-marker type='barcode' value='7'>
+            <a-box position='20 40 60' color="yellow"></a-box>
+        </a-marker>           
+            
          <a-marker id="animated-marker" type='barcode' value='6'>
             <a-entity
                 animation-mixer
